--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 
     //Lifecycle components
     def lifecycle_version = "2.3.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     //Navigation components
     def nav_version = "2.3.3"
